feat: add docker publish workflow with CI improvements
- Add docker-publish.yml workflow for building and pushing to GHCR
- Properly tag images with latest, branch name, and SHA
- Remove duplicate Docker build from ci.yml (now only lint + test)
- Fix volume permissions (start as root, chown, then su-exec to hytale)
- Add 10s timeout to version check to prevent hanging
- Update README with clearer first-time auth instructions
- Install su-exec for privilege dropping

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   hytale:
     build: .
+    image: ghcr.io/godstepx/docker-hytale-server:latest
     container_name: hytale-server
     restart: unless-stopped
     stdin_open: true
