--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "build": "bun run build:all",
-    "build:all": "bun run build:entrypoint && bun run build:healthcheck",
-    "build:entrypoint": "bun build ./src/entrypoint.ts --compile --target=bun-linux-x64-baseline --outfile dist/entrypoint",
+    "build:all": "bun run build:setup && bun run build:healthcheck",
+    "build:setup": "bun build ./src/setup.ts --compile --target=bun-linux-x64-baseline --outfile dist/setup",
     "build:healthcheck": "bun build ./src/healthcheck.ts --compile --target=bun-linux-x64-baseline --outfile dist/healthcheck",
-    "dev": "bun run src/entrypoint.ts",
+    "dev": "bun run src/setup.ts",
     "dev:healthcheck": "bun run src/healthcheck.ts",
     "lint": "tsc --noEmit",
     "format": "prettier --write src/",
@@ -18,8 +18,5 @@
     "@types/bun": "latest",
     "prettier": "^3.2.4",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "fflate": "^0.8.1"
   }
 }
