--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [main, beta]
     tags:
       - 'v*'
   pull_request:
-    branches: [main]
+    branches: [main, beta]
 
 jobs:
   lint:
