--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: ShellCheck
-        uses: ludeeus/action-shellcheck@2.0.0
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          scandir: './scripts'
-          severity: warning
-      
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install
+
+      - name: TypeScript lint
+        run: bun run lint
+
       - name: Hadolint
         uses: hadolint/hadolint-action@v3.1.0
         with:
@@ -34,10 +39,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Make scripts executable
-        run: chmod +x scripts/*.sh tests/*.sh
+        run: chmod +x tests/*.sh
       
-      - name: Install jq
-        run: sudo apt-get install -y jq
-      
-      - name: Run unit tests
-        run: ./tests/test-config-generator.sh
+      - name: Run simple test
+        run: ./tests/test-options.sh
