fix: OAuth token expiration after server restart (#2)
- Add token validation at startup against Hytale API
- Handle HTTP 401/403 errors by clearing invalid tokens
- Auto-trigger re-authentication when tokens are expired/revoked
- Add /etc/machine-id mount for hardware UUID persistence
- Add 'validate' CLI command to token-manager.sh
- Add unit tests for token validation logic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       # Export the auth link to the local directory for visibility
       - ./AUTH_LINK.url:/data/AUTH_LINK.url
       - ./SERVER_AUTH.url:/data/SERVER_AUTH.url
+      # Mount machine-id for consistent hardware identification across restarts
+      # This helps with OAuth token persistence (Hytale may bind tokens to hardware UUID)
+      - /etc/machine-id:/etc/machine-id:ro
     environment:
       - JAVA_XMS=1G
       - JAVA_XMX=4G
