--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,13 @@ services:
     ports:
       - "5520:5520/udp"
     volumes:
-      - hytale-data:/data
+      - ./hytale-data:/data
       # Linux only: avoid "Failed to get hardware UUID" at startup
-      - /etc/machine-id:/etc/machine-id:ro
+      # - /etc/machine-id:/etc/machine-id:ro
     environment:
       - JAVA_XMS=1G
       - JAVA_XMX=4G
-
-volumes:
-  hytale-data:
+      - JAVA_OPTS=-Xlog:aot
+      - MOD_INSTALL_MODE=curseforge
+      - CURSEFORGE_API_KEY=$$2a$$10$$hbfiubeWRyAx08FFf45FAOEJYhxIOuhQjOPtTs048GRLt04V8FrvC
+      - CURSEFORGE_MOD_LIST=1418291,1405415:7470393
